--- a/translations/en/loc/elements/followers.json
+++ b/translations/en/loc/elements/followers.json
@@ -59,7 +59,7 @@
         },
         {
             "id": "auclair_d",
-            "label": "A gaunt woman, who is silent",
+            "label": "A gaunt woman, who is silent.",
             "aspects": {
                 "mortal": 1,
                 "follower": 1,
@@ -1009,7 +1009,7 @@
                 "grail": 2,
                 "follower_lustsensation": 1
             },
-            "description": "Renira continues to pursue her appetites discreetly, although her ambitions have grown. ",
+            "description": "Renira continues to pursue her appetites discreetly, although her ambitions have grown.",
             "xtriggers": {
                 "promotiontodisciple": "renira_c",
                 "killmortal": "corpse",
@@ -1693,7 +1693,7 @@
         },
         {
             "id": "violet_d",
-            "label": "A kindly-faced woman, who is silent",
+            "label": "A kindly-faced woman, who is silent.",
             "aspects": {
                 "mortal": 1,
                 "follower": 1,
@@ -1719,7 +1719,7 @@
                 "acquaintance": 1,
                 "follower_lustchange": 1
             },
-            "description": "Ysabet has always been most comfortable by moonlight. She has excellent night vision. She is often overlooked in daylight.[You might be able to recruit this acquaintance as a follower.]",
+            "description": "Ysabet has always been most comfortable by moonlight. She has excellent night vision. She is often overlooked in daylight. [You might be able to recruit this acquaintance as a follower.]",
             "xtriggers": {
                 "recruiting": "ysabet_b",
                 "killmortal": "corpse",
