--- a/translations/en/loc/recipes/study_3_research_facechallenges.json
+++ b/translations/en/loc/recipes/study_3_research_facechallenges.json
@@ -95,7 +95,7 @@
             "id": "studyresearch.solved.challenge.knowledge",
             "actionid": "study",
             "label": "Aha - !",
-            "startdescription": " - there it is. Is that it? [You have resolved a Knowlege challenge.]",
+            "startdescription": " - there it is. Is that it? [You have resolved a Knowledge challenge.]",
             "mutations": [
                 {
                     "filter": "lore",
