--- a/translations/en/loc/elements/credits.json
+++ b/translations/en/loc/elements/credits.json
@@ -64,7 +64,7 @@
             "id": "credits.loc.zh-hans.",
             "label": "Chinese Localisation",
             "icon": "curio.lantern",
-            "description": "\nProject Gutenberg | indienova, Bamboo0o0, Dandirion, Erudito93, Ericcil, Fish Wu, Girafe, Lotus, Menschmaschine, Nitrome, <font=NotoSansCJKsc-Regular>N某</font>, Oval_plus, craft, laolaoruqin, railhead, wizardo, <font=NotoSansCJKsc-Regular>阿橘倒地不起, 百影虱子, 可里, 懒猫咪, 骡子·mule, 墨染胧月夜, 沙拉, 一只小雨</font>. EXILE: <font=NotoSansCJKsc-Regular>黑叶残荷 and 白前Cynanchum</font>"
+            "description": "\nProject Gutenberg | indienova, Bamboo0o0, Dandirion, Erudito93, Ericcil, Fish Wu, Girafe, Lotus, Menschmaschine, Nitrome, <font=NotoSansCJKsc-Regular>N某</font>, Oval_plus, craft, laolaoruqin, railhead, wizardo, <font=NotoSansCJKsc-Regular>阿橘倒地不起, 百影虱子, 可里, 懒猫咪, 骡子·mule, 墨染胧月夜, 沙拉, 一只小雨</font>. EXILE: <font=NotoSansCJKsc-Regular>黑叶残荷, 白前Cynanchum, 黑叶残荷, 狂犬, Dominic Fowler, IvyLili, Corey SK, Cora Reynolds, 京极明, Tomatiel西红柿精, 清客, 安定斯基</font>"
         },
         {
             "id": "credits.loc.ru",
@@ -73,10 +73,22 @@
             "icon": "catalogueofunchartedpleasures"
         },
         {
+            "id": "credits.loc.jp",
+            "label": "Japanese Localisation",
+            "description": "LocalizeDirect \n\nVERSION NOTES VOLUNTEER TRANSLATION: Nirvana Studio",
+            "icon": "jploc"
+        },
+        {
+            "id": "credits.loc.de",
+            "label": "German Localisation",
+            "description": "Localize Direct \n\nVERSION NOTES VOLUNTEER TRANSLATION: Jan Zimmer",
+            "icon": "bookofthrones"
+        },
+        {
             "id": "credits.special",
             "label": "Special Thanks",
             "icon": "temptation.remembrance",
-            "description": "Sonja & PK; Matt Hosty; Haley Uyrus; and literally everyone who has ever sent feedback or a bug report. Thank you."
+            "description": "Sonja & PK; Matt Hosty; Haley Uyrus, Norman Chalk, Jasper R, Thomas Wade, Michael Guan, Darren Liao, Eve Kimbrough, Joel Bridge, drgatos,  Erin Dalton, So La, Sean Shannon, Jakob Hajdus, Zachary Dearing, Indijohnson, Haoran Sun, Tobia Ronco, Olaf Stachowski, Aiuigi Sarig, Kamil Kozlowski, aljawn, Isyander, nsk, Marcel Möhring, Yufei Qiu, and literally everyone who has ever sent feedback or a bug report. Thank you."
         }
     ]
 }
