--- a/translations/en/loc/recipes/DLC_EXILE_exile_recipes.json
+++ b/translations/en/loc/recipes/DLC_EXILE_exile_recipes.json
@@ -1717,7 +1717,7 @@
             "id": "ally.trail.false.waiting.displaytext",
             "actionid": "ally.trail.false.2",
             "label": "Waiting...",
-            "startdescription": "\"@#ally.barber|Zulfiya's work is done. She'll be back as soon as she can travel safely.\\n#ally.delver|Orsolina's work is done. She'll be back as soon as she can travel safely.\\n#ally.fivegoer|Vasil's work is done. He'll be back as soon as he can travel safely.\\n#ally.ghoul|Dominykas' work is done. He'll be back as soon as he can travel safely.\\n#ally.huntress|Lalla Chaima's work is done. She'll be back as soon as she can travel safely.\\n#ally.smuggler|Giorgiou's work is done. He'll be back as soon as he can travel safely.\\n#ally.visionary|Mireya's work is done. She'll be back as soon as she can travel safely.\\n\r\n#ally.vivisectionist|@\"",
+            "startdescription": "\"@#ally.barber|Zulfiya's work is done. She'll be back as soon as she can travel safely.\n#ally.delver|Orsolina's work is done. She'll be back as soon as she can travel safely.\n#ally.fivegoer|Vasil's work is done. He'll be back as soon as he can travel safely.\n#ally.ghoul|Dominykas' work is done. He'll be back as soon as he can travel safely.\n#ally.huntress|Lalla Chaima's work is done. She'll be back as soon as she can travel safely.\n#ally.smuggler|Giorgiou's work is done. He'll be back as soon as he can travel safely.\n#ally.visionary|Mireya's work is done. She'll be back as soon as she can travel safely.\n\r\n#ally.vivisectionist|@\"",
             "warmup": 60,
             "linked": [
                 {
