--- a/translations/en/loc/recipes/DLC_EXILE_exile_send.json
+++ b/translations/en/loc/recipes/DLC_EXILE_exile_send.json
@@ -428,7 +428,7 @@
             "id": "send.ligeian.reward",
             "actionid": "send",
             "label": "'LIGEIA REMEMBERS'",
-            "startdescription": "@#op.echidna|'Sit down, sweetie. Let's have a chat.'\n#op.kleidouchos|'Today, I have not eaten you. What do you want? Be quick.'\n#op.marinette|'<sprite name=secrethistories>?'\n#op.sulochana|Sulochana takes a long draw from a clove cigarette. 'I'm feeling indulgent,' she purrs. 'Go on.'@\nn[Add an unknown Foe weakness to learn its nature. If you don't, the Ligeian will give you a gift, or eat a Reckoner without leaving a Trace - although she won't notice Informants and won't go after the Foe.]",
+            "startdescription": "@#op.echidna|'Sit down, sweetie. Let's have a chat.'\n#op.kleidouchos|'Today, I have not eaten you. What do you want? Be quick.'\n#op.marinette|'<sprite name=secrethistories>?'\n#op.sulochana|Sulochana takes a long draw from a clove cigarette. 'I'm feeling indulgent,' she purrs. 'Go on.'@\n[Add an unknown Foe weakness to learn its nature. If you don't, the Ligeian will give you a gift, or eat a Reckoner without leaving a Trace - although she won't notice Informants and won't go after the Foe.]",
             "slots": [
                 {
                     "id": "advice",
