--- a/translations/en/loc/recipes/DLC_EXILE_exile_use.json
+++ b/translations/en/loc/recipes/DLC_EXILE_exile_use.json
@@ -738,7 +738,7 @@
             "actionid": "use",
             "label": "A Negotiation",
             "startdescription": "I don't have time to do this the right way. Lucky, then, that I have the connections to do it the fast way.",
-            "description": "@#licence.medical|'And good morning to <i>you</i>, Doctor.'\n#licence.import|'We don't need to worry about these details. Not among friends.'\n#And done.|@",
+            "description": "@#licence.medical|'And good morning to <i>you</i>, Doctor.'\n#licence.import|'We don't need to worry about these details. Not among friends.'\n#|And done.@",
             "comments": "The slots on the purchaseable item are what restrict to a relevant connection.",
             "requirements": {
                 "op": 1,
